--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,23 +2,23 @@
   link: /pricing/
   new_window: false
   highlight: false
-- name: Blog
-  link: /blog/
-  new_window: false
-  highlight: false
-- name: About
-  link: /about/
+# - name: Blog
+#   link: /blog/
+#   new_window: false
+#   highlight: false
+- name: FAQ
+  link: /faq/
   new_window: false
   highlight: false
 - name: Contact
   link: /contact/
   new_window: false
   highlight: false
-- name: Login
-  link: /
-  new_window: true
-  highlight: false
-- name: Sign Up
-  link: /
-  new_window: true
-  highlight: true
+# - name: Login
+#   link: /
+#   new_window: true
+#   highlight: false
+# - name: Sign Up
+#   link: /
+# new_window: true
+# highlight: true
