update images & remove plans

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 - links:
-    - name: Pricing
-      link: /pricing/
+    # - name: Pricing
+    #   link: /pricing/
     # - name: Blog
     #   link: /blog/
     - name: FAQ
