--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,10 +3,10 @@
     #   link: /pricing/
     # - name: Blog
     #   link: /blog/
-    - name: FAQ
-      link: /faq/
-    - name: Contact
-      link: /contact/
+  #  - name: FAQ
+  #    link: /faq/
+  #  - name: Contact
+  #    link: /contact/
 # - links:
 #   - name: Login
 #     link: /
